Add X-Window Support

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ venv/
 # Unit test / coverage reports
 htmlcov/
 packs/splus/
+packs/splus/code/splus.py
 packs/iran-wallpaper/
 packs/shad/
 packs/bale/
