--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ build-packs/
 .git/
 *.pa
 .installed.cfg
+*.iso
+*.img
 *.egg
 # PyInstaller
 #  Usually these files are written by a python script from a template
